# rust-fuzzylogic

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: docs.yaml  docs.yml
docs/: Challenges.md  challenge1_guide.md  challenge2_guide.md  challenge3_guide.md  challenge4_guide.md  challenge5_guide.md  challenge6_guide.md  challenge7_guide.md  fuzzylogic_requirements_and_2week_plan.md  module_organization_guide.md
examples/: batch.rs  temperature.rs
src/: aggregate.rs  defuzz.rs  error.rs  lib.rs  main.rs  mamdani.rs  mod.rs  prelude.rs  rule.rs  rulespace.rs  variable.rs
src/challenges/: challenge1.rs  challenge2.rs  challenge3.rs  challenge4.rs  challenge5.rs  challenge6.rs  challenge7.rs
src/membership/: gaussian.rs  mod.rs  trapezoidal.rs  triangular.rs
tests/: mamdani_tests.rs  tests.rs
