[package]
name = "rust-fuzzylogic"
version = "0.1.1"
edition = "2021"
description = "Building blocks for authoring fuzzy inference systems in Rust."
license = "MIT OR Apache-2.0"
repository = "https://github.com/joushuakento/rust-fuzzylogic"
documentation = "https://docs.rs/rust-fuzzylogic"
homepage = "https://github.com/joushuakento/rust-fuzzylogic"
readme = "README.md"
keywords = ["fuzzy", "logic", "ai", "inference"]
categories = ["algorithms", "science"]
rust-version = "1.74"
include = [
  "Cargo.toml",
  "src/**",
  "build.rs",
  "README*",
  "LICENSE*",
  "CHANGELOG*"
]

[features]
default  = ["f64", "ops-dyn"]
f32      = []
f64      = []
serde    = ["dep:serde"]
parallel = ["dep:rayon"]
ops-minmax = []
ops-product = []
ops-lukasiewicz = []
ops-dyn = [] # enables runtime enum/trait-object API
#inference-mamdani = []

[profile.release]
debug = true

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
rayon = { version = "1", optional = true }

[[example]]
name = "temperature"
path = "examples/temperature.rs"
required-features = ["parallel"]

[[example]]
name = "batch"
path = "examples/batch.rs"
required-features = ["parallel"]

[[example]]
name = "fuzzy-c-means"
path = "examples/fuzzy_c_means.rs"
required-features = ["parallel"]

[[example]]
name = "gradient-descent"
path = "examples/gradient_descent.rs"
required-features = ["parallel"]